added .asv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ results/spnormE_g400_n100_ei100_rng42/plots/v1check_overview_spnormE_g400_n100_e
 results/spnormE_g400_n500_ei100_rng42/plots/amplitude_lookup_spnormE_g400_n500_ei100_rng42_AFsweep_pw50.pdf
 results/spnormE_g400_n500_ei100_rng42/plots/overview_spnormE_g400_n500_ei100_rng42_AFsweep_pw50.pdf
 results/spnormE_g400_n500_ei100_rng42/plots/overview_spnormE_g400_n500_ei100_rng42_f2fdiscExp_pw50.pdf
+*.asv
